tests/paczka1/fuzzy1/36985564.err
Error in line 1: tExNkC A397 32,9
Error in line 2: tExNkC S484 70,5
Error in line 4: 6grmm2o A397 16,2
Error in line 7: 6grmm2o S484 1,2
Error in line 9: 6grmm2o A397 64,1
Error in line 19: ZLjnkv7B A515 56,0
Error in line 21: 6grmm2o S484 49,5
Error in line 22: ZLjnkv7B S257 7,5
Error in line 31: aSJ S257 78,4
